--- a/src/RainFramework.EventBus/RainFramework.Mq.csproj
+++ b/src/RainFramework.EventBus/RainFramework.Mq.csproj
@@ -5,12 +5,15 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<Authors>Andy</Authors>
-		<Version>1.1.22</Version>
+		<Version>1.1.24</Version>
 		<Description>RF Mq</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
 	</ItemGroup>
 
 </Project>
