--- a/src/RainFramework.Common/RainFramework.Common.csproj
+++ b/src/RainFramework.Common/RainFramework.Common.csproj
@@ -3,8 +3,9 @@
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
 		<Authors>Andy</Authors>
-		<Version>1.0.54</Version>
+		<Version>1.0.55</Version>
 	</PropertyGroup>
 
 </Project>
