--- a/src/RainFramework.Preconfigured/RainFramework.Preconfigured.csproj
+++ b/src/RainFramework.Preconfigured/RainFramework.Preconfigured.csproj
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<Authors>Andy</Authors>
 		<OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
-		<Version>1.0.2</Version>
+		<Version>1.0.3</Version>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
@@ -15,6 +15,9 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
 		<PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson">
+			<Version>6.0.32</Version>
+		</PackageReference>
 	</ItemGroup>
 
 
@@ -30,7 +33,16 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson">
+			<Version>8.0.7</Version>
+		</PackageReference>
 		
+	</ItemGroup>
+
+
+
+	<ItemGroup>
+	  <ProjectReference Include="..\RainFramework.Common\RainFramework.Common.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
