--- a/src/RainFramework.Helper/RainFramework.Helper.csproj
+++ b/src/RainFramework.Helper/RainFramework.Helper.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<Authors>Andy</Authors>
-	<Version>1.0.3</Version>
+	<Version>1.0.5</Version>
 	<Description>RF Helper</Description>
   </PropertyGroup>
 
