--- a/src/RainFramework.Helper.Redis/RainFramework.Redis.csproj
+++ b/src/RainFramework.Helper.Redis/RainFramework.Redis.csproj
@@ -10,4 +10,8 @@
 	  <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\RainFramework.Helper\RainFramework.Helper.csproj" />
+	</ItemGroup>
+
 </Project>
