--- a/src/RainFramework.Helper/RainFramework.Helper.csproj
+++ b/src/RainFramework.Helper/RainFramework.Helper.csproj
@@ -5,8 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<Authors>Andy</Authors>
-	<Version>1.0.5</Version>
+	<Version>1.0.6</Version>
 	<Description>RF Helper</Description>
+	<GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
 </Project>
