--- a/src/RainFramework.AspNetCore/RainFramework.AspNetCore.csproj
+++ b/src/RainFramework.AspNetCore/RainFramework.AspNetCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net8.0</TargetFrameworks>
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<Authors>Andy</Authors>
-		<Version>1.1.13</Version>
+		<Version>1.1.14</Version>
 		<Description>RF Core</Description>
 		<PackageReadmeFile></PackageReadmeFile>
 	</PropertyGroup>
@@ -34,6 +34,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\RainFramework.Cahce\RainFramework.Cache.csproj" />
+		<ProjectReference Include="..\RainFramework.EFCore\RainFramework.EFCore.csproj" />
 		<ProjectReference Include="..\RainFramework.Preconfigured\RainFramework.Preconfigured.csproj" />
 		<ProjectReference Include="..\RainFramework.Repository\RainFramework.Dao.csproj" />
 	</ItemGroup>
